# weather-it

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: app.rs  layout.rs  main.rs  weather_service.rs
src/data/: location.rs  weather.rs
src/widgets/: daily_weather.rs  loader.rs  mod.rs  search.rs  weather_table.rs
