[package]
name = "weather"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tui-textarea = "0.7.0"
throbber-widgets-tui = "0.8.0"
tz = "0.2.1"
iana-time-zone = "0.1.63"
